book-import/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: book-import
  name: book-import
spec:
  replicas: 1
  selector:
    matchLabels:
      name: book-import
  template:
    metadata:
      labels:
        name: book-import
    spec:
      containers:
      - image: quay.io/jpacker/hugo:latest
        name: book-import
        ports:
        - containerPort: 1313
          name: http-server
        resources:
          limits:
            cpu: 150m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
