book-import/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: book-import
  labels:
    name: book-import
spec:
  to:
    kind: Service
    name: book-import
  tls:
    termination: edge
    insecureTerminationPolicy: Allow
  wildcardPolicy: None
